# gkp-optimal-control

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
notebooks/: grape_gkp_prep_squeezed.ipynb  understanding_gkp.ipynb  understanding_hamiltonian.ipynb
notebooks/brachistochrone/: brachistochrone_gkp_gates.ipynb  brachistochrone_gkp_state_prep.ipynb  gkp_quantum_speed_limit.ipynb
notebooks/foundations/: understanding_gkp.ipynb  understanding_kerr_hamiltonian.ipynb
src/: utils.py
src/gkp_optimal_control/: __init__.py  animation.py  brachistochrone.py  plotting.py  states.py  utils.py
