[project]
name = "gkp-optimal-control"
version = "0.1.0"
description = "Time-optimal preparation and gate design for finite-energy GKP logical states."
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "MIT" }
authors = [
    { name = "Aidan Curtis" },
]
keywords = [
    "quantum-computing",
    "bosonic-codes",
    "gkp",
    "quantum-control",
    "quantum-brachistochrone",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "qutip>=5.2.3",
    "qutip-qtrl>=0.1.5",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gkp_optimal_control"
module-root = "src"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "NPY",  # numpy-specific rules
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["E402", "F401", "F811"]
